[gd_scene load_steps=8 format=3 uid="uid://dsrcf1qpwoeef"]

[ext_resource type="Texture2D" uid="uid://dfpns1agx880g" path="res://white-blood-cell.png" id="1_1cfpp"]
[ext_resource type="Script" path="res://white_blood_cell.gd" id="1_5here"]
[ext_resource type="AudioStream" uid="uid://vpbw6tbm3sak" path="res://white-blood-cell-death.wav" id="3_10dm7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ubu61"]

[sub_resource type="Animation" id="Animation_1uggj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3ipyg"]
resource_name = "float"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xcjs0"]
_data = {
"RESET": SubResource("Animation_1uggj"),
"float": SubResource("Animation_3ipyg")
}

[node name="WhiteBloodCell" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_5here")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_1cfpp")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ubu61")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xcjs0")
}
autoplay = "float"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DeathSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_10dm7")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
